fix: GamesList displaying on small screens

--- a/rsschool-react/src/pages/MainPage.module.css
+++ b/rsschool-react/src/pages/MainPage.module.css
@@ -1,4 +1,5 @@
 .main {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
